@startuml
'https://plantuml.com/class-diagram

Hotel "1" *-- "many" Room
Room "1" --"1" Guest
class Guest {
-id
-firstName
-lastName
-email
+getId()
+getName()
+setFirstName(name)

}

class Hotel{
-id:long
-name:String
-rooms:Room[]
+getName():String
+getRooms():Room[]
}

class Room{
-roomNumber: int
-floor:int
-checkedIn:Guest
+getroomNo():int
+getFloor():int
+getCheckedIn():Guest
}

enum RoomType {
Deluxe,
Standard
}

@enduml